<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000000"
    tools:context="lb.app.teatrosnchezaguilar.module.MainActivity">
    
    <item android:id="@+id/action_settings"
        android:title="@string/action_inicio"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_quienes_somos"
        android:title="@string/action_quienes_somos"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_programacion"
        android:title="@string/action_programacion"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_calendario_eventos"
        android:title="@string/action_calendario_eventos"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_como_llegar"
        android:title="@string/action_como_llegar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_contactenos"
        android:title="@string/action_contactenos"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
